--- a/app/templates/main/college_profile.html
+++ b/app/templates/main/college_profile.html
@@ -38,8 +38,6 @@
             </div>
         </div>
 
-
-
         <div class="ui raised secondary green segment college_info">
             <h1 class="ui header college_info_section_header">{{college.name}} at a Glance</h1>
             <p style="font-size:18px;margin-bottom:15px;">{{ college.description }} </p>
@@ -66,8 +64,6 @@
                 </div>
                 {% endif %}
 
-
-
                 <div class="column">
                     {% if college.school_city != "" %}
                     <div class="ui segment stat_box">
@@ -83,7 +79,7 @@
             
 
             {% if college.is_hispanic_serving == 1%}
-                <p><strong>This school is a hispanic-serving institution.</strong>: 
+            <p><strong>This school is a hispanic-serving institution.</strong>: 
             {% endif %}
         </div>
 
@@ -91,26 +87,39 @@
         <div class="ui raised secondary green segment college_info"> 
             <h1 class="ui header college_info_section_header">Costs</h1>
             
-            <div class="ui two column doubling stackable grid container stretched flex_wrapper">
+            <div class="ui two column doubling stackable grid container flex_wrapper">
                 <div class="column">
+
+                    {% if college.tuition_in_state == college.tuition_out_of_state %} 
                     {{create_medium_stat_box('$'+"{0:,.0f}".format(college.cost_of_attendance_in_state), 'Average Total Cost of Attendance')}}
+                    {% else %}
+                    {{create_medium_stat_box('$'+"{0:,.0f}".format(college.cost_of_attendance_in_state), 'Average Total In-State Cost of Attendance')}}
+                    {{create_medium_stat_box('$'+"{0:,.0f}".format(college.cost_of_attendance_out_of_state), 'Average Total Out-of-State Cost of Attendance')}}
+                    {% endif %} 
+
                 
                      <div class="ui two column doubling stackable grid container stretched flex_wrapper">
                         <div class="column">
                             {% if college.room_and_board != 0.0 %}
-                                {{create_medium_stat_box('$'+"{0:,.0f}".format(college.room_and_board), 'Room and Board')}}   
+                            {{create_medium_stat_box('$'+"{0:,.0f}".format(college.room_and_board), 'Room and Board')}}   
                             {% endif %} 
                         </div>
                         <div class="column">
                             {% if college.room_and_board != 0.0 %}
-                                {{create_medium_stat_box('$'+"{0:,.0f}".format(college.tuition_in_state), 'Tuition')}}   
+                            {{create_medium_stat_box('$'+"{0:,.0f}".format(college.tuition_in_state), 'Tuition')}}   
                             {% endif %} 
                         </div>
 
                     </div>
                 </div>
+                {% if college.net_price_0_30000 is not none and 
+                    college.net_price_30001_48000 is not none and
+                    college.net_price_48001_75000 is not none and
+                    college.net_price_75001_110000 is not none and
+                    college.net_price_110001_plus is not none
+                %}
                 <div class="column">
-                    {% if college.net_price_0_30000 is not none %}
+
                     <table class="ui celled padded table">
                         <tr>
                             <th>Family Income</th>
@@ -127,13 +136,6 @@
                         <tr>
                             <td> $30,0001 - $48,000 </td>
                             <td> ${{"{0:,.0f}".format(college.net_price_30001_48000)}} </td>
-                        </tr>
-                        {% endif %}
-
-                        {% if college.net_price_48001_75000 is not none %}
-                        <tr>
-                            <td> $48,001 - $75,000 </td>
-                            <td> ${{"{0:,.0f}".format(college.net_price_48001_75000)}} </td>
                         </tr>
                         {% endif %}
                         
@@ -159,34 +161,10 @@
                         {% endif %}
 
                     </table>
-                    {% endif %}
                 </div>
+                {% endif %}
 
             </div>
-
-            {% if college.tuition_in_state != 0.0 and college.tuition_out_of_state != 0.0 %} 
-                    <!-- <div class="column">
-                    <p><strong>Tuition</strong>:
-                        {% if college.tuition_in_state == college.tuition_out_of_state %} 
-                        ${{ "{0:,.0f}".format(college.tuition_in_state) }}
-                        {% else %}
-                        In-state ${{ "{0:,.0f}".format(college.tuition_in_state) }} --  Out-of-state  ${{ "{0:,.0f}".format(college.tuition_out_of_state)}}
-                        {% endif %} 
-                    </p>
-                    </div> -->
-            {% endif %} 
-            
-            
-            {% if college.cost_of_attendance_in_state != 0.0 and college.cost_of_attendance_out_of_state != 0.0 %}
-            <p><strong>Average Total Cost of Attendance</strong>:
-                {% if college.cost_of_attendance_in_state == college.cost_of_attendance_out_of_state %}
-                ${{ "{0:,.0f}".format(college.cost_of_attendance_in_state) }}
-                {% else %}
-                In-state ${{ "{0:,.0f}".format(college.cost_of_attendance_in_state) }} -- Out-of-state ${{ "{0:,.0f}".format(college.cost_of_attendance_out_of_state)}}
-                {% endif %}
-            </p>
-            {% endif %}
-    
 
         </div>
 
